# expr-simplifier

./: README.md  justfile  pyproject.toml
.github/workflows/: release.yml
examples/: auto_simplify.py
src/expr_simplifier/: __init__.py  __main__.py  symbol_table.py  typing.py  utils.py
src/expr_simplifier/analyzer/: __init__.py  extern_symbol_analyzer.py
src/expr_simplifier/transforms/: __init__.py  auto_simplify.py  constant_folding.py  cse.py  inline_named_expr.py  logical_simplification.py  method_to_operator.py  remove_named_expr.py  remove_unused_named_expr.py
tests/: test_expr_simplifier.py
tests/test_transforms/: test_constant_folding.py  test_cse.py  test_inline_named_expr.py  test_logical_simplification.py  test_method_to_operator.py  test_remove_named_expr.py  test_remove_unused_named_expr.py  utils.py
