[project]
name = "expr-simplifier"
version = "0.1.1"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["typing-extensions>=4.12.2"]
authors = [{ name = "Nyakku Shigure", email = "sigure.qaq@gmail.com" }]
keywords = []
license = { text = "MIT" }
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/ShigureLab/expr-simplifier"
Documentation = "https://github.com/ShigureLab/expr-simplifier"
Repository = "https://github.com/ShigureLab/expr-simplifier"
Issues = "https://github.com/ShigureLab/expr-simplifier/issues"

[project.scripts]
expr_simplifier = "expr_simplifier.__main__:main"

[dependency-groups]
dev = [
  "pyright>=1.1.403",
  "ruff>=0.12.5",
  "pytest>=8.4.1",
  "pytest-rerunfailures>=15.1",
]

[tool.pyright]
include = ["src/expr_simplifier", "tests"]
pythonVersion = "3.9"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # Pycodestyle
  "E",
  "W",
  # Isort
  "I",
  # Pyupgrade
  "UP",
  # Flake8-pyi
  "PYI",
  # Flake8-use-pathlib
  "PTH",
  # Yesqa
  "RUF100",
]
ignore = [
  "E501", # line too long, duplicate with ruff fmt
  "F401", # imported but unused, duplicate with pyright
  "F841", # local variable is assigned to but never used, duplicate with pyright
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party = ["expr_simplifier"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["I"]

[tool.pytest.ini_options]
python_files = ["tests/*.py", "tests/**/*.py"]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
